--- a/django_app/templates/admin/base_site.html
+++ b/django_app/templates/admin/base_site.html
@@ -1,4 +1,5 @@
 {% extends "admin/base.html" %}
+{% load static %}
 
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
